--- a/pikaday/pikaday.css
+++ b/pikaday/pikaday.css
@@ -195,13 +195,7 @@ http://nicolasgallagher.com/micro-clearfix-hack/
 }
 
 /* Height and width has to be equal! */
-.pikaday-display, .pikaday-invisible {
-	
-}
-
-.pikaday-display {
-	
-}
+.pikaday-display, .pikaday-invisible {}
 
 .pikaday-display-native {
 	pointer-events: none;
