--- a/pikaday-responsive/css/pikaday-package.css
+++ b/pikaday-responsive/css/pikaday-package.css
@@ -1,9 +1,16 @@
+/*! 
+ * PikadayResponsive 
+ * 
+ * author: Francesco Novy 
+ * licence: MIT license 
+ * https://github.com/mydea/PikadayResponsive 
+ */
+
 @charset "UTF-8";
 
 /*!
  * Pikaday
  * Copyright © 2014 David Bushell | BSD & MIT license | http://dbushell.com/
- * Extended by Francesco Novy | http://fnovy.com
  */
 
 .pika-single {
@@ -150,6 +157,8 @@ http://nicolasgallagher.com/micro-clearfix-hack/
 .pika-button {
     cursor: pointer;
     display: block;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
     outline: none;
     border: 0;
     margin: 0;
@@ -160,6 +169,11 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     line-height: 15px;
     text-align: right;
     background: #f5f5f5;
+}
+
+.pika-week {
+    font-size: 11px;
+    color: #999;
 }
 
 .is-today .pika-button {
@@ -189,28 +203,59 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     border-radius: 3px !important;
 }
 
+/* styling for abbr */
+.pika-table abbr {
+    border-bottom: none;
+    cursor: help;
+}
+
+
+/*! 
+ * PikadayResponsive 
+ * 
+ * author: Francesco Novy 
+ * licence: MIT license 
+ * https://github.com/mydea/PikadayResponsive 
+ */
+
+
 .pikaday-container {
-	display: inline-block;
-	position: relative;
+  display: inline-block;
+  position: relative;
 }
 
 /* Height and width has to be equal! */
 .pikaday-display, .pikaday-invisible {
-	width: 120px;
+  width: 100%;
 }
 
 .pikaday-display-native {
-	pointer-events: none;
-	cursor: pointer;
+  pointer-events: none;
+  cursor: pointer;
 }
 
 .pikaday-display.is-invalid {
-	background: rgba(255,0,0,0.05);
+  background: rgba(255, 0, 0, 0.05);
 }
 
 .pikaday-invisible {
-	opacity: 0;
-	position: absolute;
-	left: 0;
-	top: 0;
+  opacity: 0;
+  position: absolute;
+  display: block;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
 }
+
+.pikaday-container .pikaday-clear-btn {
+  transition: 0.2s all ease-in-out;
+  opacity: 1;
+}
+
+.pikaday-container .is-empty .pikaday-clear-btn {
+  opacity: 0;
+  pointer-events: none;
+}
+
+/*# sourceMappingURL=pikaday-responsive.css.map */
